dev/nana-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-play-depl
spec:
  selector:
    matchLabels:
      app: argo-play
  replicas: 4
  template:
    metadata:
      labels:
        app: argo-play
    spec:
      containers:
      - name: argo-play
        image: nanajanashia/argocd-app:1.2
        ports:
        - containerPort: 8080
