dev/nana-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-play-ing
spec:
  rules:
    - host: dev.argoplay
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-play-svc 
                port:
                  number: 8080
